- removed designed by KUMO becuase his site is now a dead link

--- a/src/mtgen/Views/Shared/SetView.cshtml
+++ b/src/mtgen/Views/Shared/SetView.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/generator.css" type="text/css" />
     <link rel="stylesheet" href="~/css/print.css" type="text/css" media="print" />
     <link rel="stylesheet" href="~/@Model.Code/set.css" type="text/css" />
+    <link rel="dns-prefetch" href="http://media.wizards.com">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
@@ -33,7 +34,6 @@
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-    <link rel="dns-prefetch" href="//media.wizards.com">
 </head>
 <body class="home">
     <script>
@@ -90,7 +90,6 @@
     </main>
     <footer>
         <p>Created by: Cam Marsollier - <a href="mailto:cam.marsollier@gmail.com">cam.marsollier@gmail.com</a></p>
-        <p>Design by: KUMO - <a href="http://www.kumokumo.com.ar">www.kumokumo.com.ar</a></p>
         <p>Wizards of the Coast, Magic: The Gathering, and their logos are trademarks of Wizards of the Coast LLC in the United States and other countries. © 2009 Wizards. All Rights Reserved.</p>
         <p>MtG Generator is not affiliated with, endorsed, sponsored, or specifically approved by Wizards of the Coast LLC. MtG Generator may use the trademarks and other intellectual property of Wizards of the Coast LLC, which is permitted under Wizards' Fan Site Policy. For more information about Wizards of the Coast or any of Wizards' trademarks or other intellectual property, please visit their website at <a href="http://www.wizards.com">www.wizards.com</a>.</p>
     </footer>
