--- a/src/mtgen/Views/Home/About.cshtml
+++ b/src/mtgen/Views/Home/About.cshtml
@@ -13,19 +13,10 @@
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/css/html5reset.css" type="text/css" />
     <link rel='stylesheet' href='@Url.Content("~/css/home.css")' type='text/css' />
+    @{await Html.RenderPartialAsync("_favicons"); }
 </head>
 <body>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-25921884-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+    @{await Html.RenderPartialAsync("_ga"); }
     <header>
         <img src="@Url.Content("~/images/logo-mtg.png")" alt="Magic the Gathering" />
         <h1>Sealed Deck Card Generator</h1>
