- tweaked base HTML

--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -2,10 +2,11 @@
     Layout = null;
     var allSets = Model as AllSets;
 }
-<!DOCTYPE html>
+<!doctype html>
 <html dir="ltr" lang="en-US">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Magic: The Gathering: Sealed Deck Generator</title>
     <meta name="Description" content="Magic: The Gathering Sealed Deck Card Generator: Generate accurate random Magic: The Gathering boosters and other such madness.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
