--- a/src/mtgen/Views/Shared/SetView.cshtml
+++ b/src/mtgen/Views/Shared/SetView.cshtml
@@ -1,9 +1,10 @@
 ﻿@using System.Linq;
 @model Set
-<!DOCTYPE html>
-<html dir="ltr" lang="en-US" itemscope itemtype="http://schema.org/MtG Deck Generator">
+<!doctype html>
+<html dir="ltr" lang="en-US">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>@Model.Name - Magic: The Gathering: Card Generator</title>
     <meta name="Description" content="@Model.Name Sealed Deck Card Generator for Magic: The Gathering">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
