- added version number to script tag for cache busting

--- a/mtgen/Views/Shared/SetView.cshtml
+++ b/mtgen/Views/Shared/SetView.cshtml
@@ -71,7 +71,7 @@
     <script src="~/lib/mdn.base64.min.js"></script>
     <link rel="stylesheet" href="~/lib/fancybox2/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
     <script src="~/lib/fancybox2/jquery.fancybox.pack.js?v=2.1.5"></script>
-    <script src="~/lib/mtg-generator-lib.js"></script>
+    <script src="~/lib/mtg-generator-lib.js?v2.3"></script>
     <script src="~/lib/mtg-generator.js?v=2.1"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.4.0/holder.js"></script>
     <script src="~/lib/jquery.sticky-kit.min.js"></script>
