--- a/mtgen/wwwroot/css/generator.css
+++ b/mtgen/wwwroot/css/generator.css
@@ -348,6 +348,7 @@ main > em {
 	background: rgba(70,70,70,.8);
 }
 #product-content .result .set h2 {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 100;
