- fixed bug where printing a page that contained a foil card would hide the foil card

--- a/mtgen/wwwroot/css/print.css
+++ b/mtgen/wwwroot/css/print.css
@@ -22,3 +22,13 @@ section.set {
 .card em {
 	display: none;
 }
+.foil:before {
+    background: inherit;
+    bottom: inherit;
+    content: inherit;
+    left: inherit;
+    position: inherit;
+    right: inherit;
+    top: inherit;
+    width: inherit;
+}
