- fixed issue where it would start applying the foil overlay over the second line of text if there was one

--- a/mtgen/wwwroot/css/generator.css
+++ b/mtgen/wwwroot/css/generator.css
@@ -402,7 +402,7 @@ main > em {
 	position: relative;
 }
 .foil:before {
-	background: url(../cards/mtg-foil.png);
+	background: url(../cards/mtg-foil.png) no-repeat;
 	bottom: 0;
 	content: "";
 	left: 0;
