--- a/mtgen/wwwroot/css/generator.css
+++ b/mtgen/wwwroot/css/generator.css
@@ -371,6 +371,7 @@ main > em {
 }
 
 .card {
+    cursor: pointer;
 	display: inline-block;
 	margin: 0 0 1.5em 0;
 	position: relative;
@@ -381,6 +382,10 @@ main > em {
 }
 .card.doubleface img:first-child {
     margin-right: 0;
+}
+
+.card.moved-to-deck {
+    display: none;
 }
 
 @media (min-width: 480px) and (max-width: 610px) {
