- all options now work properly - refactored to move UI operations into the data api where applicable (like randomly choosing a pack) - ready to get the generate button working

--- a/mtgen/wwwroot/css/generator.css
+++ b/mtgen/wwwroot/css/generator.css
@@ -299,7 +299,7 @@ main em.loading {
 #product-content .options label {
 	padding-right: .5em;
 }
-#generate {
+button.generate {
 	margin-top: 1em;
 }
 
